main.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
}
html {
  overflow-x: hidden;
}

body {
  font-family: "Lato", sans-serif;
  overflow-x: hidden;
}

/* #section1 h1, h2, button, a {
  text-align: center;
} */

#section1_wrapper {
  background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.7), rgba(203, 22, 209, 0.2)), url("fast.gif");
  background-size: cover;
  background-repeat: no-repeat;
  height: 1000px;
}



#section1 {
  text-align: center;
  
}

#h1_section1 {
  font-size: 80px;
  color: #DFDFE5;
  padding-top: 300px;
  display: none;
}

h2 {
  font-size: 30px;
}

#h2_role {
  display: none;
}

#see_proj_btn {
  display: none;
  /* margin-bottom: 00px; */
}

#section1 h2 {
  font-size: 30px;
  margin-top: 10px;
  color: white;
  margin-bottom: 30px;
}

#section1_btn {
  text-decoration: none;
  color: white;
  border-radius: 80% !important;
  cursor: pointer;
}




  
}

.flex-container {
  display: flex;
  /* flex-wrap: wrap; */
  justify-content: center;
}

#section2_wrapper {
  background-color: white;
   height: 700px;
  /*display: inline-block;
	width: 500px;
	min-height: 50px;
	background-color: #eee;
	height: auto; */
}

#section3_wrapper {
  background-color: blue;
  height: 1000px;
}
#section4_wrapper {
  background-color: brown;
  height: 1000px;
}

#section2 {
  margin-left: 100px;
  /* margin-right: 50px; */
  padding-top: 100px;
  width: 600px;
}

#section2 h2 {
  padding-bottom: 50px;
}

#section2 p {
  padding-bottom: 50px;
}

#section2-1 {
  
  margin-top: 120px;
}

img {
  width: 30%;
}

.h1_section2 {
  text-align: center;
  padding-top: 110px;
  font-size: 50px;
}

.h1_section2-1 {
  text-align: center;
  padding-top: 10px;
  font-size: 30px;
}

.section2_h5 {
  font-size: 20px;
  margin-bottom: 20px;
}

.section2_p {
  font-size: 18px;
}


@media screen and (max-width: 1024px) {
  #section1 h1 {
      font-size: 80px;
  }
  

  #section2 {
    margin-left: 10px;
    /* margin-right: 50px; */
    padding-top: 100px;
    width: 500px;
  }
}

@media screen and (max-width: 768px) {
  #section1 h1 {
      font-size: 4.0rem;
  }

  #section1 h2 {
      font-size: 1.5rem;
  }

}

@media screen and (max-width: 480px) {
  #section1 h1 {
      font-size: 3.0rem;
      padding-top: 200px;
  }

  #section1 h2 {
      font-size: 1.5rem;
  }

  /* SECTION2 */
  .flex-container {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  #section2_wrapper {
    height: 1600px;
  }

  #section2 {
    /* padding-right: 50px; */
    text-align: center;
    margin-bottom: -150px;
  }

  img {
    width: 100%;
    /* margin-left: 100px; */
  }

  #section1_wrapper {
    background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.7), rgba(203, 22, 209, 0.2)), url("fast.gif");
    background-size: cover;
    background-repeat: no-repeat;
    height: 800px;
  }

  
}

